@@ -1,7 +1,7 @@
-# $snafu: Makefile,v 1.7 2003/04/16 23:08:37 marc Exp $
+# $snafu: Makefile,v 1.8 2003/06/12 16:44:59 marc Exp $
 #
 # gardump/garload: programs to dump/load waypoints, routes, and tracks from
-# a garmin gps unit. Tested on III, III+, 12 and 12XL units.
+# a garmin gps unit.
 #
 SUBDIR= lib gardump garload
 
