@@ -1,6 +1,6 @@
-.\"	$snafu: gardump.1,v 1.8 2003/04/24 20:34:59 marc Exp $
+.\" $snafu: gardump.1,v 1.9 2003/06/12 16:44:59 marc Exp $
 .\"
-.\"	Placed in the Public Domain by Marco S Hyman
+.\" Public Domain, 2001, Marco S Hyman <marc@snafu.org>
 .\"
 .Dd May 7, 1998
 .Dt GARDUMP 1
@@ -95,7 +95,7 @@ gardump -w
 .Ed
 results in the output
 .Bd -literal -offset indent
-[gardump version 1.9]
+[gardump version 1.92]
 [product 155, version 207: GPS 5 Software Version 2.07]
 [waypoints, 3 records]
 # **n [route name]
