@@ -1,7 +1,7 @@
-# $snafu: Makefile,v 1.2 2001/05/02 00:34:52 marc Exp $
+# $snafu: Makefile,v 1.3 2003/06/12 16:44:59 marc Exp $
 #
 # garload: program to load waypoints, routes, and tracks to a garmin
-# gps unit.  Only tested on a GPS III
+# gps unit.
 #
 
 PROG=	garload
