@@ -1,6 +1,6 @@
-.\"	$snafu: garload.1,v 1.8 2003/04/24 20:34:59 marc Exp $
+.\" $snafu: garload.1,v 1.9 2003/06/12 16:44:59 marc Exp $
 .\"
-.\"	Placed in the Public Domain by  Marco S. Hyman
+.\" Public Domain, 2001, Marco S Hyman <marc@snafu.org>
 .\"
 .Dd May 7, 1998
 .Dt GARLOAD 1
