@@ -1,7 +1,7 @@
 /*
- *	$snafu: gps1.c,v 1.14 2003/04/11 23:46:53 marc Exp $
+ * $snafu: gps1.c,v 1.15 2003/06/12 16:45:00 marc Exp $
  *
- *	Placed in the Public Domain by Marco S. Hyman
+ * Public Domain, 2001, Marco S Hyman <marc@snafu.org>
  */
 
 #include <sys/types.h>
