@@ -1,7 +1,7 @@
 /*
- *	$snafu: gpsformat.c,v 1.25 2003/04/25 03:27:26 marc Exp $
+ * $snafu: gpsformat.c,v 1.26 2003/06/12 16:45:00 marc Exp $
  *
- *	Placed in the Public Domain by Marco S. Hyman
+ * Public Domain, 2001, Marco S Hyman <marc@snafu.org>
  */
 
 #include <sys/types.h>
